[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "runtoolsio"
authors = [{name = "Stan Svec", email = "dev@stansvec.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.11"
dynamic = ["version", "description"]
dependencies = [
    "runtools-runcore",
    "runtools-runjob",
    "runtools-runcli",
    "runtools-taro",
]

[tool.flit.module]
name = "runtools"

[project.urls]
Home = "https://github.com/runtoolsio/runtools"
