[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "runtoolsio"
authors = [{name = "Stan Svec", email = "dev@stansvec.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.12"
dynamic = ["version", "description"]
dependencies = [
    "runtoolsio-runcore>=0.1,<0.2",
    "runtoolsio-runjob>=0.1,<0.2",
    "runtoolsio-runcli>=0.1,<0.2",
    "runtoolsio-taro>=0.1,<0.2",
]

[project.optional-dependencies]
cli = ["runtoolsio-runcli>=0.1,<0.2"]
ops = ["runtoolsio-taro>=0.1,<0.2"]
core = ["runtoolsio-runcore>=0.1,<0.2"]
job = ["runtoolsio-runjob>=0.1,<0.2"]

[project.scripts]
run = "runtools.runcli:main_cli"
taro = "runtools.taro.main:run"

[tool.flit.module]
name = "runtools"

[project.urls]
Home = "https://github.com/runtoolsio/runtools"
